Enable appengine integration.