@@ -56,6 +56,14 @@
           <cssFiles>
             <cssFile>io/reinert/gwtsamples/twitter/resources/Style.css</cssFile>
           </cssFiles>
+
+          <!--<copyWebapp>true</copyWebapp>-->
+          <!--<server>com.google.appengine.tools.development.gwt.AppEngineLauncher</server>-->
+          <!--<appEngineVersion>${gae.version}</appEngineVersion>-->
+          <!--<appEngineHome>${gae.home}</appEngineHome>-->
+          <!--<extraJvmArgs>-Xss2048k -Xmx1024M -XX:MaxPermSize=512m</extraJvmArgs>-->
+          <!--<localWorkers>2</localWorkers>-->
+
         </configuration>
         <executions>
           <execution>
